<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <!-- Location Found -->
    <item android:id="@+id/action_location_found"
        android:icon="@drawable/android_home"
        android:alpha="0.1"
        android:title="@string/action_location_found"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/reset"
        android:icon="@android:drawable/ic_menu_mylocation"
        app:showAsAction="ifRoom"
        android:title="@string/action_mylocation"/> <!-- Going too change to home once working -->
    <item
        android:id="@+id/about"
        android:icon="@android:drawable/ic_dialog_info"
        app:showAsAction="never"
        android:title="@string/about">
    </item>
    <item
        android:id="@+id/exit"
        app:showAsAction="never"
        android:title="@string/exit">
    </item>

</menu>