<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:clickable="false">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Please fill in a bit of info on what you would like to eat!"
        android:textSize="20dp"
        android:padding="20dp" />

    <EditText
        android:id="@+id/restaurantName"
        android:layout_height="wrap_content"
        android:hint="@string/restaurantName"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:padding="10dp">
    </EditText>


    <TextView
        android:id="@+id/textViewFoodType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="What kind of food would you like?"
        android:textSize="15dp"
        android:padding="20dp" />

    <Spinner
        android:id="@+id/SpinnerFoodType"
        android:layout_height="wrap_content"
        android:prompt="@string/foodtype"
        android:layout_width="fill_parent"
        android:entries="@array/foodtypeList"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
    </Spinner>

    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="What area would you like to find a restaurant in?"
        android:textSize="15dp"
        android:padding="20dp" />

    <Spinner
        android:id="@+id/SpinnerLocation"
        android:layout_height="wrap_content"
        android:prompt="@string/location"
        android:layout_width="fill_parent"
        android:entries="@array/locationsList"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
    </Spinner>

    <Button
        android:id="@+id/ButtonFindFood"
        android:layout_height="wrap_content"
        android:text="@string/SubmitFoodButton"
        android:onClick="SubmitFood"
        android:padding="10dp"
        android:layout_width="fill_parent">
    </Button>


</LinearLayout>